# gestao-de-entregas-e-fretes

./: descript.py
backend/: .gitignore  pyproject.toml
backend/instance/: database.sqlite
backend/migrations/versions/: 2078685a865f_initial_migration.py  935c87ddf649_adicionado_foreign_key_à_coluna_created_.py  95d9b3118584_initial_migration.py  bfc1feb6106f_alterado_nome_da_tabela_status_type_for_.py  dbfc51cb11f4_adicionado_email_hash_para_consultas_de_.py  e0f5c48669e7_alterado_coluna_capacity_string_para_.py
backend/src/: utils.py
backend/src/app/: app.py  config.py
backend/src/controllers/: auth.py  driver.py  driver_status.py  load_type.py  orders.py  orders_status.py  points_of_sale.py  user.py  vehicle.py  vehicle_type.py
backend/src/db/: db.py  schema.sql
backend/src/models/: __init__.py  driver.py  driver_status.py  load_type.py  orders.py  orders_status.py  points_of_sale.py  role.py  status_type_for_orders.py  user.py  vehicle.py  vehicle_type.py
backend/src/views/: auth.py  driver.py  driver_status.py  load_type.py  orders.py  orders_status.py  points_of_sale.py  role.py  user.py  vehicle.py  vehicle_type.py
